[gd_scene load_steps=12 format=2]

[ext_resource path="res://gui/PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/images/GUI atlas.png" type="Texture" id=2]
[ext_resource path="res://assets/images/GUI-Hover atlas.png" type="Texture" id=3]
[ext_resource path="res://assets/audio/sounds/rollover_in.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 88, 1080, 1536, 944 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 1896, 1360, 352, 120 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 896, 912, 352, 120 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 112, 920, 344, 112 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 1832, 1712, 488, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 832, 1264, 480, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 48, 1264, 472, 128 )

[node name="PauseScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -375.0
margin_top = -210.0
margin_right = 375.0
margin_bottom = 210.0
texture = SubResource( 1 )
expand = true
stretch_mode = 6

[node name="ResumeBtn" type="TextureButton" parent="TextureRect"]
margin_left = 253.0
margin_top = 110.0
margin_right = 453.0
margin_bottom = 180.0
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 7 )
texture_hover = SubResource( 3 )
expand = true
stretch_mode = 5

[node name="MainBtn" type="TextureButton" parent="TextureRect"]
margin_left = 233.0
margin_top = 210.0
margin_right = 483.0
margin_bottom = 280.0
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 6 )
texture_hover = SubResource( 5 )
expand = true
stretch_mode = 5

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[connection signal="mouse_entered" from="TextureRect/ResumeBtn" to="." method="_on_Btn_focus_entered"]
[connection signal="pressed" from="TextureRect/ResumeBtn" to="." method="_on_Btn_focus_entered"]
[connection signal="pressed" from="TextureRect/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="mouse_entered" from="TextureRect/MainBtn" to="." method="_on_Btn_focus_entered"]
[connection signal="pressed" from="TextureRect/MainBtn" to="." method="_on_MainBtn_pressed"]
[connection signal="pressed" from="TextureRect/MainBtn" to="." method="_on_Btn_focus_entered"]
